Navbar structure updated

--- a/client-side/nimbelcart/package.json
+++ b/client-side/nimbelcart/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "swiper": "^8.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
