--- a/client-side/nimbelcart/package.json
+++ b/client-side/nimbelcart/package.json
@@ -15,7 +15,7 @@
     "react-razorpay": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
