--- a/client-side/nimbelcart/package.json
+++ b/client-side/nimbelcart/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "swiper": "^8.4.6",
