--- a/client-side/nimbelcart/package.json
+++ b/client-side/nimbelcart/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "chakra-ui-carousel": "^1.0.6",
     "faker": "^6.6.6",
     "framer-motion": "^8.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-icons": "^4.7.1",
+    "react-magnify-image": "^2.7.4",
     "react-razorpay": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.0.2",
