--- a/client-side/nimbelcart/package.json
+++ b/client-side/nimbelcart/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.3",
     "chakra-ui-carousel": "^1.0.6",
     "faker": "^6.6.6",
+    "firebase": "^9.16.0",
     "framer-motion": "^8.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
